feat: Rename project and integrate Gemini API
Updates the project name to "paper-insight-ai" and integrates the Gemini API for scientific paper summarization. Enhances the summarization prompt to focus on Phage Display Peptide Technology and generate WeChat-ready drafts. Also, updates `package.json` to include the Gemini SDK and `index.html` for UI consistency.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auto-summary-simple",
+  "name": "paper-insight-ai",
   "version": "1.0.0",
-  "description": "Zero-build Cloudflare Pages project",
-  "scripts": {},
-  "dependencies": {}
+  "dependencies": {
+    "@google/genai": "^1.35.0"
+  }
 }
