feat: Enhance summarization and API handling
Refine the Gemini API model and prompt for more accurate scientific paper summarization, with a specific focus on phage display technology. Improve API key retrieval to support both Cloudflare environment variables and Node.js process environment variables. Update UI elements for better readability and include a "conclusion" field in the JSON output. Add a build script to package.json and configure Wrangler for page build output.

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "@google/genai": "^1.35.0"
+  },
+  "scripts": {
+    "build": "echo 'No build step required for static assets'"
   }
 }
